ADSM/static/css/adsm.css
/* ... */
select:required, input:required, textarea:required {
    background-color: rgba(244, 230, 0, .2);
    display: block;
    border: none;
    outline: none;
    box-shadow: inset 0px 0px 6px 2px rgba(0, 0, 0, .1);
    padding-left: 5px;
    -webkit-appearance: none;
    /* height: 63px; */
    border-radius: 0;
    margin-left: 0;
}

label {
    line-height: 1;
}
select:hover, input:hover, textarea:hover {
    outline: inset 1px rgba(84, 201, 232, .5);
    border: 1px solid transparent;
    outline-offset: -1px;
    padding-left: 4px;
}
select:hover {
    padding-left: 5px;
}
select:required:hover{
    padding-left: 4px;
}
input:focus,
select:focus,
textarea:focus {
  outline: rgba(84, 201, 232, .7) solid 2px !important;
}
input[type="number"], input[type="text"] {
    height:20px;
    padding: 0 0 0 5px;
}
input[type="number"]{
    max-width: 130px;
}
input[type="number"]:hover {
    padding: 1px 0 0 6px;
}
input[type="number"]:required:hover {
    padding: 0 0 0 4px;
}
input[type="text"]:hover {
    padding-left: 6px;
}
input[type="text"]:required:hover{
    padding-left: 4px;
}
input .checkboxinput:focus {
    outline: none !important;
}
input[type="file"] {
    border:1px solid transparent;
}
input[type="file"]:hover {
    padding: 0;
}
input[type="file"]:focus {
    border: 1px solid transparent;
    outline: none !important;
}
textarea {
    padding: 5px 10px;
    width: 100%;
    height: 70px;
    max-width: 500px;
}
textarea:hover {
    padding-left: 10px;
}
input[type="checkbox"] {
    margin-top: 1px;
}
.checkbox {
    margin-bottom: 18px;
    margin-left: 20px;
}
/*-------------------------------------------------------------*/
/*-----readonly form styling-----*/
/*-------------------------------------------------------------*/
form.readonly input,
form.readonly select{
    border: none;
    margin: 0px;
    width: 100%;
    background-image: none;
}

form.readonly select {
    -webkit-appearance: none;
    background-color: transparent;
    padding-left: 10px;
    pointer-events: none;
    box-shadow:none;
}
form.readonly input {
    background-color: transparent;
    padding-left: 10px;
    pointer-events: none;
    box-shadow: none;
}
/*-------------------------------------------------------------*/
/*-----editable form styling-----*/
/*-------------------------------------------------------------*/
form.editable select {
    /*-webkit-appearance: menulist;*/
    pointer-events: all;
    margin-bottom: 0px;
}
form.editable input{
    border: 1px solid #ccc;
    pointer-events: all;
}
.help-block {  
    font-weight: 200;
    display: block;
    height: auto;
    overflow: hidden; /* check boxes are bold from mixins.less and I think it looks better with definitions*/
}

.hide-help-text .help-block {
    display: none;
}

.probability-form .help-block { /*Fixes #663 by hiding all help blocks under probability functions*/
    display: none;
}

.hide-help {
    height: 0;
}

.error-inline strong,
.help-inline {  /* validation errors from the server */
    background-color: #D13737;
    color: white;
}

.icon {
    max-height: 20px;
    max-width: 20px;
}
section .icon{
    max-height: 16px;
}
/*-------------------------------------------------------------*/
/*-----header-----*/
/*-------------------------------------------------------------*/
header {
    position: fixed;
    z-index: 100;
    background-color: #606060;
    width: 100%;
    height: 55px;
    top: 0;
    min-width:1000px;
    color: white;
}
header:after{
    content: "";
    width: 100%;
    height: 1px;
    background-color: white;
    position: absolute;
    bottom: 5px;
    left: 0px;
}

header a, header button {
    height: 35px;
    line-height: 35px;
}

header .btn, #header .btn {
    padding: 8px 10px 8px 10px;
}
header .buttonHolder {
    min-width: 256px;
}


header h1 {
    margin: 0 0px;
    font-size: 20pt;
    font-weight: 400;
    background:#606060;
    color:white;
}

header div {  
    /*width: 226px;  too generic*/
    overflow:auto;
    float: left;
}

header p {
    float: none;
}
header .header_logo{
    height: 23px;
    display: block;
    background-image: url("https://github.com/NAVADMC/ADSM/blob/gh-pages/images/adsm_logo.png?raw=true");
    margin-top: 15px;
    background-position: 20px;
    background-repeat: no-repeat;
    min-width: 190px;
}
header .info-overlay {
    height: 30px;
    width: 30px;
    display: block;
    margin: 10px 7px 0px auto;
    min-width: 33px;
    position: absolute;
    right: 0;
}
header .col-xs-8 {
    height: 42px;
}
.header_filename {
    padding-left: 0;
}
header .filename {
    float: left;
    /*min-width: 540px;*/
    padding-top: 11px;
}

.filename input {
    border: none;
    width: calc(100% - 75px);
    pointer-events: none; /*not editable by user*/
}
.scenario-status {
    display:none
}
.scenario-status.unsaved {
    display:block;
}
.scenario-status h2{
    line-height: 21px;
    padding-bottom: 0;
    margin-bottom: 0;
    visibility: hidden;
    margin-top: 1px;
}
.scenario-status p{
    font-size: 18px;
    font-style: italic;
    font-weight: 300;
}
#file_panel {
    z-index: 102;/*necessary for #unsaved-header*/
}
#unsaved-header {
    color: white;
    position: fixed;
    top: 0;
    right: 3%;
    z-index: 130;
    /* font-size: 18px !important; */
}
#unsaved-form-header {
    color: white;
    position: fixed;
    top: 25px;
    right: 3%;
    z-index: 130;
    /* font-size: 18px !important; */
}

input#save_scenario {
    font-size: 18px;
    color: #9BD9D6;
}

header .buttonHolder{
    padding-top:8px;
}
header .buttonHolder .btn {
    background-color: transparent;
    transition: all .2s ease;
    color: rgba(255, 255, 255, .7);
    margin-left: 5px;
    height: 20px;
    padding: 0;
    margin-top: 0;
    color: rgba(255, 255, 255, .7);
    position: relative;
}
header #file_actions .icon{
    max-height: 14px;
    margin-right: 3px;
    margin-bottom: 2px;
    opacity:.7;
    transition: opacity .2s ease;
}
/* ... */

